# open-cli

./: .gitignore  README.md  example_flow.json  pyproject.toml
open_test_agent/: agent_server.py  executor.py  install.py  locator.py  main.py
open_test_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
open_test_agent/drivers/: adb.py  hdc.py  tool.py
