[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-test-agent"
version = "0.1.0"
description = "本地工作流执行 CLI — open-test-agent"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13",
    "httpx>=0.27",
    "jsonpath-ng>=1.6",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
android = [
    "adbutils>=2.6",
]
harmony = [
    # hdc 命令行工具随 DevEco Studio / OpenHarmony SDK 安装，无 PyPI 包
    # 确保 hdc 在 PATH 中：which hdc
]
all-devices = [
    "adbutils>=2.6",
]

[project.scripts]
open-test = "open_test_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_test_agent*"]
